--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.MySecondApp"
         tools:targetApi="31">
         <activity
-            android:name=".presentation.SecondActivity"
+            android:name=".presentation.activities.SecondActivity"
             android:exported="false" />
 
         <receiver
@@ -21,13 +21,8 @@
             android:enabled="true"
             android:exported="true" />
 
-        <service
-            android:name=".data.MyService"
-            android:enabled="true"
-            android:exported="true" />
-
         <activity
-            android:name=".presentation.MainActivity"
+            android:name=".presentation.activities.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
